MDEV-6424: Mariadb server crashes with assertion failure in file ha_innodb.cc

Analysis: For some reason table stats for a table pointed from a index 
is not initialized. Added additional warning output on this situation
and table stats initialization. This is better than asserting.